--- a/RTT_Client_GTK/UI/WelcomeWindow.glade
+++ b/RTT_Client_GTK/UI/WelcomeWindow.glade
@@ -418,6 +418,7 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="use_action_appearance">False</property>
+                        <signal name="clicked" handler="join_match_click" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
