Gtk: Partial support for changing Map in MatchLobby
- Maps need to be defined in XML and read by client still

--- a/RTT_Client_GTK/UI/WelcomeWindow.glade
+++ b/RTT_Client_GTK/UI/WelcomeWindow.glade
@@ -858,6 +858,7 @@
                               <item translatable="yes">Even Cooler Map</item>
                               <item translatable="yes">ZOMG</item>
                             </items>
+                            <signal name="changed" handler="map_combo_changed" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
