GTK: Disabled the private match check box, as it is unimplmented yet

--- a/RTT_Client_GTK/UI/WelcomeWindow.glade
+++ b/RTT_Client_GTK/UI/WelcomeWindow.glade
@@ -664,6 +664,7 @@
                             <property name="label" translatable="yes">Set as Private</property>
                             <property name="use_action_appearance">False</property>
                             <property name="visible">True</property>
+                            <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
                             <property name="use_action_appearance">False</property>
