GTK: Initial support for launching Ogre_3D from GTK client
- No actions hooked up yet. Just launching the Ogre executable.

--- a/RTT_Client_GTK/UI/WelcomeWindow.glade
+++ b/RTT_Client_GTK/UI/WelcomeWindow.glade
@@ -1092,6 +1092,7 @@ Condition: </property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
+                    <signal name="clicked" handler="launch_match_clicked" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
